# client/public/docs/openapi.json
@@ -763,7 +763,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/CreateQuiz"
+                  "$ref": "#/components/schemas/WorkDto"
                 }
               }
             }
@@ -979,10 +979,26 @@
               },
               "answer": {
                 "type": "string"
+              },
+              "author": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "$ref": "#/components/schemas/Dto<\"user\">"
+                  },
+                  "signInName": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "id",
+                  "signInName"
+                ]
               }
             },
             "required": [
               "answer",
+              "author",
               "id",
               "quiz"
             ]
@@ -1036,10 +1052,26 @@
               },
               "answer": {
                 "type": "string"
+              },
+              "author": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "$ref": "#/components/schemas/Dto<\"user\">"
+                  },
+                  "signInName": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "id",
+                  "signInName"
+                ]
               }
             },
             "required": [
               "answer",
+              "author",
               "id",
               "quiz"
             ]
