# server/api/private/works/index.ts
@@ -1,6 +1,6 @@
 import type { DefineMethods } from 'aspida';
 import type { MaybeId } from 'common/types/brandedId';
-import type { CreateQuiz, WorkDto } from 'common/types/work';
+import type { WorkCreateVal, WorkDto } from 'common/types/work';
 
 export type Methods = DefineMethods<{
   get: {
@@ -11,8 +11,8 @@ export type Methods = DefineMethods<{
   };
 
   post: {
-    reqBody: { quiz: string; answer: string };
-    resBody: CreateQuiz;
+    reqBody: WorkCreateVal;
+    resBody: WorkDto;
   };
 
   delete: {
