# server/domain/work/workUseCase/workUseCase.ts
@@ -1,19 +1,21 @@
 import type { MaybeId } from 'common/types/brandedId';
-import type { CreateQuiz, WorkDto } from 'common/types/work';
+import type { UserDto } from 'common/types/user';
+import type { WorkDto } from 'common/types/work';
 import { transaction } from 'service/prismaClient';
 import { workMethod } from '../model/workMethods';
+import type { WorkCreateSaveVal } from '../model/workType';
 import { workCommand } from '../repository/workCommands';
 import { workQuery } from '../repository/workQuery';
 import { toWorkDto } from '../service/toWorkDto';
 
 export const workUseCase = {
-  create: async (quiz: string, answer: string): Promise<CreateQuiz> => {
+  create: async (user: UserDto, val: WorkCreateSaveVal): Promise<WorkDto> => {
     return transaction('RepeatableRead', async (tx) => {
-      const CreateWork = workMethod.create({ quiz, answer });
+      const createWork = workMethod.create(user, val);
 
-      await workCommand.save(tx, CreateWork);
+      await workCommand.save(tx, createWork);
 
-      return CreateWork;
+      return toWorkDto(createWork.work)
     });
   },
   delete: (workId: MaybeId['work']): Promise<WorkDto> =>
